// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AttributeCell > renders boolean value 1`] = `
<div>
  <span
    class="text-info"
    data-testid="CheckIcon"
    weight="bold"
  />
</div>
`;

exports[`AttributeCell > renders choice attribute 1`] = `
<div>
  NVidia K80
</div>
`;

exports[`AttributeCell > renders invalid choice attribute 1`] = `
<div>
  N/A
</div>
`;

exports[`AttributeCell > renders list attribute 1`] = `
<div>
  <span>
    <span
      data-testid="CheckIcon"
      weight="bold"
    />
     Intel Xeon E5-2650v3
    <br />
  </span>
  <span>
    <span
      data-testid="CheckIcon"
      weight="bold"
    />
     Intel Xeon E5-2680v3
    <br />
  </span>
</div>
`;

exports[`AttributeCell > renders negative boolean value 1`] = `
<div>
  <span
    class="text-danger"
    data-testid="XIcon"
    weight="bold"
  />
</div>
`;

exports[`AttributeCell > renders string attribute 1`] = `
<div>
  /opt/
</div>
`;
